update misc files

--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -2,7 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from graphviz import Digraph\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fillcolors = {\n",
+    "    'storage': 'blue',\n",
+    "    'hydropower': 'red',\n",
+    "    'piecewisehydropower'\n",
+    "    'instreamflowrequirement': 'green',\n",
+    "    'catchment': 'lightblue',\n",
+    "    'output': 'black',\n",
+    "    'breaklink': 'lightgrey'\n",
+    "}\n",
+    "\n",
+    "fontcolors = {\n",
+    "    'storage': 'white',\n",
+    "    'hydropower': 'white',\n",
+    "    'instreamflowrequirement': 'black',\n",
+    "    'output': 'white'\n",
+    "}\n",
+    "\n",
+    "# dot = Digraph(comment='System')\n",
+    "\n",
+    "basins = ['stanislaus', 'merced', 'san_joaquin']\n",
+    "basins = ['stanislaus']\n",
+    "suffix = '_simplified'\n",
+    "\n",
+    "for basin in basins:\n",
+    "    with open(os.path.join(basin, 'pywr_model{}.json'.format(suffix))) as f:\n",
+    "        model = json.load(f)\n",
+    "    _dot = Digraph(name=basin, comment=basin)\n",
+    "    for node in model['nodes']:\n",
+    "        ntype = node['type'].lower()\n",
+    "        fillcolor = fillcolors.get(ntype, 'white')\n",
+    "        fontcolor = fontcolors.get(ntype, 'black')\n",
+    "        shape = 'rect' if ntype == 'storage' else 'oval'\n",
+    "        style = 'filled' if fillcolor else None\n",
+    "        _dot.node(node['name'], shape=shape, style=style, fillcolor=fillcolor, fontcolor=fontcolor)\n",
+    "#         dot.node(node['name'], shape='shape', style=style, fillcolor=fillcolor, fontcolor=fontcolor)\n",
+    "\n",
+    "#     dot.edges(model['edges'])\n",
+    "    \n",
+    "    _dot.edges(model['edges'])\n",
+    "    _dot.render(os.path.join(basin, '{}_schematic{}.gv'.format(basin, suffix)), view=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -11,50 +70,12 @@
        "'system_schematic.gv.pdf'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
-    "from graphviz import Digraph\n",
-    "import json\n",
-    "\n",
-    "fillcolors = {\n",
-    "    'storage': 'blue',\n",
-    "    'hydropower': 'red',\n",
-    "    'instreamflowrequirement': 'green',\n",
-    "    'catchment': 'lightblue'\n",
-    "}\n",
-    "\n",
-    "fontcolors = {\n",
-    "    'storage': 'white',\n",
-    "    'hydropower': 'white',\n",
-    "    'instreamflowrequirement': 'black'\n",
-    "}\n",
-    "\n",
-    "dot = Digraph(comment='System')\n",
-    "\n",
-    "for basin in ['stanislaus', 'merced', 'san_joaquin']:\n",
-    "    with open(os.path.join(basin, 'pywr_model.json')) as f:\n",
-    "        model = json.load(f)\n",
-    "        \n",
-    "    for node in model['nodes']:\n",
-    "        ntype = node['type'].lower()\n",
-    "        fillcolor = fillcolors.get(ntype, 'white')\n",
-    "        fontcolor = fontcolors.get(ntype, 'black')\n",
-    "        shape = 'rect' if ntype == 'storage' else 'oval'\n",
-    "        dot.node(node['name'], shape=shape,\n",
-    "                 style='filled' if fillcolor else None, fillcolor=fillcolor, fontcolor=fontcolor)\n",
-    "\n",
-    "    dot.edges(model['edges'])\n",
-    "    \n",
-    "#     _dot = Digraph(name=basin)\n",
-    "#     _dot.edges(model['edges'])\n",
-    "#     _dot.render(os.path.join(basin, '{}_schematic.gv'.format(basin)), view=True)\n",
-    "    \n",
-    "\n",
     "connecting_edges = [\n",
     "    [\"San Joaquin River Outflow [node]\", \"San Joaquin-San Joaquin\"],\n",
     "    [\"Merced River Outflow [node]\", \"Merced-San Joaquin\"],\n",
