update some parameters to include error checks

--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "fillcolors = {\n",
     "    'storage': 'blue',\n",
     "    'hydropower': 'red',\n",
-    "    'piecewisehydropower'\n",
+    "    'piecewisehydropower': 'red',\n",
     "    'instreamflowrequirement': 'green',\n",
     "    'catchment': 'lightblue',\n",
     "    'output': 'black',\n",
@@ -30,6 +30,7 @@
     "fontcolors = {\n",
     "    'storage': 'white',\n",
     "    'hydropower': 'white',\n",
+    "    'piecewisehydropower': 'white',\n",
     "    'instreamflowrequirement': 'black',\n",
     "    'output': 'white'\n",
     "}\n",
@@ -38,10 +39,15 @@
     "\n",
     "basins = ['stanislaus', 'merced', 'san_joaquin']\n",
     "basins = ['stanislaus']\n",
-    "suffix = '_simplified'\n",
+    "version = None\n",
+    "version = 'simplified'\n",
     "\n",
     "for basin in basins:\n",
-    "    with open(os.path.join(basin, 'pywr_model{}.json'.format(suffix))) as f:\n",
+    "    filename = 'pywr_model'\n",
+    "    if version:\n",
+    "        filename += '_' + version\n",
+    "    filename += '.json'\n",
+    "    with open(os.path.join(basin, filename)) as f:\n",
     "        model = json.load(f)\n",
     "    _dot = Digraph(name=basin, comment=basin)\n",
     "    for node in model['nodes']:\n",
