updates to schematic & names

--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,9 @@
     "basins = ['stanislaus', 'merced', 'san_joaquin']\n",
     "basins = ['stanislaus']\n",
     "version = None\n",
-    "version = 'simplified'\n",
+    "version = 'cleaned'\n",
+    "# version = 'simplified'\n",
+    "# version = 'monthly'\n",
     "\n",
     "for basin in basins:\n",
     "    filename = 'pywr_model'\n",
@@ -51,17 +53,53 @@
     "        model = json.load(f)\n",
     "    _dot = Digraph(name=basin, comment=basin)\n",
     "    for node in model['nodes']:\n",
+    "        \n",
+    "        node_name = node['name']\n",
+    "        if version == 'monthly':\n",
+    "            if ' [output]' in node_name:\n",
+    "                continue\n",
+    "            parts = node_name.split('/')\n",
+    "            if len(parts) > 1:\n",
+    "                base_node_name, month = parts\n",
+    "                if int(month) > 1:\n",
+    "                    continue\n",
+    "        \n",
     "        ntype = node['type'].lower()\n",
     "        fillcolor = fillcolors.get(ntype, 'white')\n",
     "        fontcolor = fontcolors.get(ntype, 'black')\n",
     "        shape = 'rect' if ntype == 'storage' else 'oval'\n",
     "        style = 'filled' if fillcolor else None\n",
-    "        _dot.node(node['name'], shape=shape, style=style, fillcolor=fillcolor, fontcolor=fontcolor)\n",
+    "        \n",
+    "        if version == 'monthly':\n",
+    "            shape = 'oval'\n",
+    "            if ntype == 'storage' or month == 2:\n",
+    "                fillcolor = fillcolors.get('breaklink')\n",
+    "                fontcolor = 'black'\n",
+    "            if '[link]' in node_name:\n",
+    "                fillcolor = fillcolors.get('storage')\n",
+    "                fontcolor = fontcolors.get('storage')\n",
+    "        \n",
+    "        _dot.node(node_name, shape=shape, style=style, fillcolor=fillcolor, fontcolor=fontcolor)\n",
     "#         dot.node(node['name'], shape='shape', style=style, fillcolor=fillcolor, fontcolor=fontcolor)\n",
     "\n",
     "#     dot.edges(model['edges'])\n",
-    "    \n",
-    "    _dot.edges(model['edges'])\n",
+    "\n",
+    "    for edge in model['edges']:\n",
+    "        if version == 'monthly':\n",
+    "            n1, n2 = edge\n",
+    "            try:\n",
+    "                base_n1_name, m1 = n1.split('/')\n",
+    "                base_n2_name, m2 = n2.split('/')\n",
+    "                m1 = int(m1)\n",
+    "                m2 = int(m2)\n",
+    "                if (int(m1) > 1 or int(m2) > 1) and not (m1 == 1 and m2 == 2):\n",
+    "                    continue\n",
+    "            except:\n",
+    "                if '[output]' in n2:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    pass\n",
+    "        _dot.edges([edge])\n",
     "    _dot.render(os.path.join(basin, '{}_schematic{}.gv'.format(basin, suffix)), view=True)"
    ]
   },
