--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "fillcolors = {\n",
     "    'storage': 'blue',\n",
+    "    'virtualstorage': 'blue',\n",
     "    'hydropower': 'red',\n",
     "    'piecewisehydropower': 'red',\n",
     "    'instreamflowrequirement': 'green',\n",
@@ -29,6 +30,7 @@
     "\n",
     "fontcolors = {\n",
     "    'storage': 'white',\n",
+    "    'virtualstorage': 'white',\n",
     "    'hydropower': 'white',\n",
     "    'piecewisehydropower': 'white',\n",
     "    'instreamflowrequirement': 'black',\n",
@@ -40,9 +42,9 @@
     "basins = ['stanislaus', 'merced', 'san_joaquin']\n",
     "basins = ['stanislaus']\n",
     "version = None\n",
-    "version = 'cleaned'\n",
+    "# version = 'cleaned'\n",
     "# version = 'simplified'\n",
-    "# version = 'monthly'\n",
+    "version = 'monthly'\n",
     "\n",
     "for basin in basins:\n",
     "    filename = 'pywr_model'\n",
@@ -61,25 +63,31 @@
     "            parts = node_name.split('/')\n",
     "            if len(parts) > 1:\n",
     "                base_node_name, month = parts\n",
-    "                if int(month) > 1:\n",
+    "                if int(month) > 1 and not ('[original]' in node_name and int(month) == 2):\n",
     "                    continue\n",
     "        \n",
     "        ntype = node['type'].lower()\n",
     "        fillcolor = fillcolors.get(ntype, 'white')\n",
     "        fontcolor = fontcolors.get(ntype, 'black')\n",
-    "        shape = 'rect' if ntype == 'storage' else 'oval'\n",
-    "        style = 'filled' if fillcolor else None\n",
+    "        shape = 'rect' if ntype in ['storage', 'virtualstorage'] else 'oval'\n",
+    "        style = 'filled' if fillcolor else ''\n",
+    "        \n",
+    "        if ntype == 'virtualstorage':\n",
+    "            style += ',dashed'\n",
     "        \n",
     "        if version == 'monthly':\n",
     "            shape = 'oval'\n",
     "            if ntype == 'storage' or month == 2:\n",
     "                fillcolor = fillcolors.get('breaklink')\n",
     "                fontcolor = 'black'\n",
-    "            if '[link]' in node_name:\n",
-    "                fillcolor = fillcolors.get('storage')\n",
-    "                fontcolor = fontcolors.get('storage')\n",
+    "#             if '[link]' in node_name:\n",
+    "#                 fillcolor = fillcolors.get('storage')\n",
+    "#                 fontcolor = fontcolors.get('storage')\n",
     "        \n",
     "        _dot.node(node_name, shape=shape, style=style, fillcolor=fillcolor, fontcolor=fontcolor)\n",
+    "        \n",
+    "        if version == 'monthly' and ntype == 'virtualstorage':\n",
+    "            _dot.edge(node_name.replace('/', ' [link]/'), node_name, style='dashed')\n",
     "#         dot.node(node['name'], shape='shape', style=style, fillcolor=fillcolor, fontcolor=fontcolor)\n",
     "\n",
     "#     dot.edges(model['edges'])\n",
@@ -100,7 +108,7 @@
     "                else:\n",
     "                    pass\n",
     "        _dot.edges([edge])\n",
-    "    _dot.render(os.path.join(basin, '{}_schematic{}.gv'.format(basin, suffix)), view=True)"
+    "    _dot.render(os.path.join(basin, '{}_schematic{}.gv'.format(basin, version)), view=True)"
    ]
   },
   {
