update preprocessing scripts

--- a/preprocessing/hydrology daily to monthly forecast.ipynb
+++ b/preprocessing/hydrology daily to monthly forecast.ipynb
@@ -13,38 +13,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb01.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb02.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb03.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb04.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb05.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb06.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb07.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb08.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb09.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb10.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb11.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb12.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb13.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb14.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb15.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb16.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb17.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb18.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb19.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb20.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb21.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb22.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb23.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb24.csv\n",
-      "../data/Stanislaus/Scenarios/Livneh/runoff\\tot_runoff_sb25.csv\n"
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb01.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb02.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb03.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb04.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb05.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb06.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb07.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb08.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb09.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb10.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb11.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb12.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb13.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb14.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb15.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb16.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb17.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb18.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb19.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb20.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb21.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb22.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb23.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb24.csv\n",
+      "../data/Stanislaus River/Scenarios/Livneh/runoff\\tot_runoff_sb25.csv\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
     "# Initial pre-processing\n",
     "debug = False\n",
     "month_columns = ['{:02}'.format(i) for i in range(1,13)]\n",
-    "for basin in ['Stanislaus']:\n",
+    "for basin in ['Stanislaus River']:\n",
     "    for scenario in ['Livneh']:\n",
     "        runoff_dir = '../data/{}/Scenarios/{}/runoff'.format(basin, scenario)\n",
     "#         print(runoff_dir)\n",
