update schematic script

--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
     "basins = ['stanislaus']\n",
     "version = None\n",
     "# version = 'cleaned'\n",
-    "# version = 'simplified'\n",
-    "version = 'monthly'\n",
+    "version = 'simplified'\n",
+    "# version = 'monthly'\n",
     "\n",
     "for basin in basins:\n",
     "    filename = 'pywr_model'\n",
@@ -108,7 +108,7 @@
     "                else:\n",
     "                    pass\n",
     "        _dot.edges([edge])\n",
-    "    _dot.render(os.path.join(basin, '{}_schematic{}.gv'.format(basin, version)), view=True)"
+    "    _dot.render(os.path.join(basin, '{}_schematic{}.gv'.format(basin, '' if not version else '_' + version)), view=True)"
    ]
   },
   {
