--- a/preprocessing/fill missing gauge data.ipynb
+++ b/preprocessing/fill missing gauge data.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,19 +142,40 @@
        "1980-01-05        222.889836     71.048448  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
+    "# Stanislaus\n",
     "filename_in = '../data/Stanislaus River/gauges/storage.csv'\n",
     "filename_out = '../data/Stanislaus River/gauges/storage_cleaned.csv'\n",
     "df = pd.read_csv(filename_in, index_col=[0], parse_dates=True).fillna(0)\n",
     "df.to_csv(filename_out)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tuolumne\n",
+    "filename_in = '../data/Tuolumne River/Observed/Reservoirs/GaugeReservoir_mcm_TUO_R3_old.csv'\n",
+    "filename_out = '../data/Tuolumne River/Observed/Reservoirs/GaugeReservoir_mcm_TUO_R3.csv'\n",
+    "df = pd.read_csv(filename_in, index_col=[0], parse_dates=True).fillna(0)['1950-10-01':'2018-09-30'].replace('#VALUE!', 0)\n",
+    "for c in df.columns:\n",
+    "    df[c] = pd.to_numeric(df[c])\n",
+    "df.to_csv(filename_out)\n",
+    "\n",
+    "filename_in = '../data/Tuolumne River/Observed/Streamflow/GaugeStreamFlow_cms_TUO_R3_old.csv'\n",
+    "filename_out = '../data/Tuolumne River/Observed/Streamflow/GaugeStreamFlow_cms_TUO_R3.csv'\n",
+    "df = pd.read_csv(filename_in, index_col=[0], parse_dates=True).fillna(0)['1950-10-01':'2018-09-30'].replace('#VALUE!', 0)\n",
+    "for c in df.columns:\n",
+    "    df[c] = pd.to_numeric(df[c])\n",
+    "df.to_csv(filename_out)"
    ]
   },
   {
