add tuolumne schematics

--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,10 +40,10 @@
     "# dot = Digraph(comment='System')\n",
     "\n",
     "basins = ['stanislaus', 'merced', 'san_joaquin']\n",
-    "basins = ['stanislaus']\n",
+    "basins = ['tuolumne']\n",
     "version = None\n",
     "# version = 'cleaned'\n",
-    "version = 'simplified'\n",
+    "# version = 'simplified'\n",
     "# version = 'monthly'\n",
     "\n",
     "for basin in basins:\n",
@@ -109,35 +109,6 @@
     "                    pass\n",
     "        _dot.edges([edge])\n",
     "    _dot.render(os.path.join(basin, '{}_schematic{}.gv'.format(basin, '' if not version else '_' + version)), view=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'system_schematic.gv.pdf'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "connecting_edges = [\n",
-    "    [\"San Joaquin River Outflow [node]\", \"San Joaquin-San Joaquin\"],\n",
-    "    [\"Merced River Outflow [node]\", \"Merced-San Joaquin\"],\n",
-    "    [\"STN-L-RIV2 Outflow [node]\", \"Stanislaus-San Joaquin\"],\n",
-    "    [\"San Joaquin-San Joaquin\", \"Merced-San Joaquin\"],\n",
-    "    [\"Merced-San Joaquin\", \"Stanislaus-San Joaquin\"],\n",
-    "    [\"Stanislaus-San Joaquin\", \"Delta\"]\n",
-    "]\n",
-    "dot.edges(connecting_edges)\n",
-    "dot.render('system_schematic.gv', view=True)"
    ]
   },
   {
