revisions of network and reservoir storage costs

--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,10 +40,10 @@
     "# dot = Digraph(comment='System')\n",
     "\n",
     "basins = ['stanislaus', 'merced', 'san_joaquin']\n",
-    "basins = ['tuolumne']\n",
+    "basins = ['stanislaus']\n",
     "version = None\n",
     "# version = 'cleaned'\n",
-    "# version = 'simplified'\n",
+    "version = 'simplified'\n",
     "# version = 'monthly'\n",
     "\n",
     "for basin in basins:\n",
@@ -110,6 +110,13 @@
     "        _dot.edges([edge])\n",
     "    _dot.render(os.path.join(basin, '{}_schematic{}.gv'.format(basin, '' if not version else '_' + version)), view=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
