--- a/preprocessing/pivot energy prices.ipynb
+++ b/preprocessing/pivot energy prices.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -480,20 +480,20 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sorted_reversed = [sorted(s, reverse=True) for s in df.values]\n",
-    "df1 = pd.DataFrame(data=sorted_reversed, index=df.index, columns=df.columns)\n",
-    "df1.head()"
+    "df = pd.DataFrame(data=sorted_reversed, index=df.index, columns=df.columns)\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -567,123 +567,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-01</th>\n",
-       "      <td>49.83</td>\n",
-       "      <td>51.93</td>\n",
-       "      <td>51.95</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53.31</td>\n",
-       "      <td>53.89</td>\n",
-       "      <td>53.9</td>\n",
-       "      <td>55.79</td>\n",
-       "      <td>56.4</td>\n",
-       "      <td>57.12</td>\n",
-       "      <td>...</td>\n",
-       "      <td>59.47</td>\n",
-       "      <td>59.53</td>\n",
-       "      <td>59.62</td>\n",
-       "      <td>60.42</td>\n",
-       "      <td>64.34</td>\n",
-       "      <td>64.73</td>\n",
-       "      <td>67.74</td>\n",
-       "      <td>69.9</td>\n",
-       "      <td>71.29</td>\n",
        "      <td>71.69</td>\n",
+       "      <td>71.29</td>\n",
+       "      <td>69.9</td>\n",
+       "      <td>67.74</td>\n",
+       "      <td>64.73</td>\n",
+       "      <td>64.34</td>\n",
+       "      <td>60.42</td>\n",
+       "      <td>59.62</td>\n",
+       "      <td>59.53</td>\n",
+       "      <td>59.47</td>\n",
+       "      <td>...</td>\n",
+       "      <td>57.12</td>\n",
+       "      <td>56.4</td>\n",
+       "      <td>55.79</td>\n",
+       "      <td>53.9</td>\n",
+       "      <td>53.89</td>\n",
+       "      <td>53.31</td>\n",
+       "      <td>53</td>\n",
+       "      <td>51.95</td>\n",
+       "      <td>51.93</td>\n",
+       "      <td>49.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-02</th>\n",
-       "      <td>49.03</td>\n",
-       "      <td>49.95</td>\n",
-       "      <td>50.09</td>\n",
-       "      <td>51.34</td>\n",
-       "      <td>52.87</td>\n",
-       "      <td>53.5</td>\n",
-       "      <td>53.89</td>\n",
-       "      <td>55.62</td>\n",
-       "      <td>56.7</td>\n",
-       "      <td>59.12</td>\n",
-       "      <td>...</td>\n",
-       "      <td>63.15</td>\n",
-       "      <td>63.16</td>\n",
-       "      <td>63.26</td>\n",
-       "      <td>64.45</td>\n",
-       "      <td>66.52</td>\n",
-       "      <td>71.08</td>\n",
-       "      <td>71.8</td>\n",
-       "      <td>74.76</td>\n",
-       "      <td>76.47</td>\n",
        "      <td>76.86</td>\n",
+       "      <td>76.47</td>\n",
+       "      <td>74.76</td>\n",
+       "      <td>71.8</td>\n",
+       "      <td>71.08</td>\n",
+       "      <td>66.52</td>\n",
+       "      <td>64.45</td>\n",
+       "      <td>63.26</td>\n",
+       "      <td>63.16</td>\n",
+       "      <td>63.15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>59.12</td>\n",
+       "      <td>56.7</td>\n",
+       "      <td>55.62</td>\n",
+       "      <td>53.89</td>\n",
+       "      <td>53.5</td>\n",
+       "      <td>52.87</td>\n",
+       "      <td>51.34</td>\n",
+       "      <td>50.09</td>\n",
+       "      <td>49.95</td>\n",
+       "      <td>49.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-03</th>\n",
-       "      <td>49.55</td>\n",
-       "      <td>51.76</td>\n",
-       "      <td>51.99</td>\n",
-       "      <td>54.38</td>\n",
-       "      <td>55.12</td>\n",
-       "      <td>59.21</td>\n",
-       "      <td>59.9</td>\n",
-       "      <td>65.18</td>\n",
-       "      <td>67.84</td>\n",
-       "      <td>70.93</td>\n",
-       "      <td>...</td>\n",
-       "      <td>73.71</td>\n",
-       "      <td>73.84</td>\n",
-       "      <td>74.37</td>\n",
-       "      <td>74.77</td>\n",
-       "      <td>75.18</td>\n",
-       "      <td>76.68</td>\n",
-       "      <td>77.83</td>\n",
-       "      <td>80.02</td>\n",
-       "      <td>82.48</td>\n",
        "      <td>83.3</td>\n",
+       "      <td>82.48</td>\n",
+       "      <td>80.02</td>\n",
+       "      <td>77.83</td>\n",
+       "      <td>76.68</td>\n",
+       "      <td>75.18</td>\n",
+       "      <td>74.77</td>\n",
+       "      <td>74.37</td>\n",
+       "      <td>73.84</td>\n",
+       "      <td>73.71</td>\n",
+       "      <td>...</td>\n",
+       "      <td>70.93</td>\n",
+       "      <td>67.84</td>\n",
+       "      <td>65.18</td>\n",
+       "      <td>59.9</td>\n",
+       "      <td>59.21</td>\n",
+       "      <td>55.12</td>\n",
+       "      <td>54.38</td>\n",
+       "      <td>51.99</td>\n",
+       "      <td>51.76</td>\n",
+       "      <td>49.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-04</th>\n",
-       "      <td>52.44</td>\n",
-       "      <td>54.13</td>\n",
-       "      <td>54.53</td>\n",
-       "      <td>56.8</td>\n",
-       "      <td>57.34</td>\n",
-       "      <td>60.52</td>\n",
-       "      <td>63.2</td>\n",
-       "      <td>65.84</td>\n",
-       "      <td>71.55</td>\n",
-       "      <td>72.73</td>\n",
-       "      <td>...</td>\n",
-       "      <td>75.06</td>\n",
-       "      <td>75.6</td>\n",
-       "      <td>75.82</td>\n",
-       "      <td>76.51</td>\n",
-       "      <td>76.87</td>\n",
-       "      <td>77.85</td>\n",
-       "      <td>78.6</td>\n",
-       "      <td>81.88</td>\n",
-       "      <td>83.77</td>\n",
        "      <td>84.68</td>\n",
+       "      <td>83.77</td>\n",
+       "      <td>81.88</td>\n",
+       "      <td>78.6</td>\n",
+       "      <td>77.85</td>\n",
+       "      <td>76.87</td>\n",
+       "      <td>76.51</td>\n",
+       "      <td>75.82</td>\n",
+       "      <td>75.6</td>\n",
+       "      <td>75.06</td>\n",
+       "      <td>...</td>\n",
+       "      <td>72.73</td>\n",
+       "      <td>71.55</td>\n",
+       "      <td>65.84</td>\n",
+       "      <td>63.2</td>\n",
+       "      <td>60.52</td>\n",
+       "      <td>57.34</td>\n",
+       "      <td>56.8</td>\n",
+       "      <td>54.53</td>\n",
+       "      <td>54.13</td>\n",
+       "      <td>52.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-05</th>\n",
-       "      <td>53.49</td>\n",
-       "      <td>55.19</td>\n",
-       "      <td>55.79</td>\n",
-       "      <td>58.39</td>\n",
-       "      <td>58.51</td>\n",
-       "      <td>61.15</td>\n",
-       "      <td>64.55</td>\n",
-       "      <td>66.22</td>\n",
-       "      <td>72.21</td>\n",
-       "      <td>72.28</td>\n",
-       "      <td>...</td>\n",
-       "      <td>73.79</td>\n",
-       "      <td>73.98</td>\n",
-       "      <td>74.57</td>\n",
-       "      <td>74.95</td>\n",
-       "      <td>75.01</td>\n",
-       "      <td>77.14</td>\n",
-       "      <td>77.58</td>\n",
-       "      <td>80.89</td>\n",
-       "      <td>82.82</td>\n",
        "      <td>83.79</td>\n",
+       "      <td>82.82</td>\n",
+       "      <td>80.89</td>\n",
+       "      <td>77.58</td>\n",
+       "      <td>77.14</td>\n",
+       "      <td>75.01</td>\n",
+       "      <td>74.95</td>\n",
+       "      <td>74.57</td>\n",
+       "      <td>73.98</td>\n",
+       "      <td>73.79</td>\n",
+       "      <td>...</td>\n",
+       "      <td>72.28</td>\n",
+       "      <td>72.21</td>\n",
+       "      <td>66.22</td>\n",
+       "      <td>64.55</td>\n",
+       "      <td>61.15</td>\n",
+       "      <td>58.51</td>\n",
+       "      <td>58.39</td>\n",
+       "      <td>55.79</td>\n",
+       "      <td>55.19</td>\n",
+       "      <td>53.49</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -693,32 +693,32 @@
       "text/plain": [
        "Hour           1      2      3      4      5      6      7      8      9   \\\n",
        "Date                                                                        \n",
-       "2000-01-01  49.83  51.93  51.95     53  53.31  53.89   53.9  55.79   56.4   \n",
-       "2000-01-02  49.03  49.95  50.09  51.34  52.87   53.5  53.89  55.62   56.7   \n",
-       "2000-01-03  49.55  51.76  51.99  54.38  55.12  59.21   59.9  65.18  67.84   \n",
-       "2000-01-04  52.44  54.13  54.53   56.8  57.34  60.52   63.2  65.84  71.55   \n",
-       "2000-01-05  53.49  55.19  55.79  58.39  58.51  61.15  64.55  66.22  72.21   \n",
+       "2000-01-01  71.69  71.29   69.9  67.74  64.73  64.34  60.42  59.62  59.53   \n",
+       "2000-01-02  76.86  76.47  74.76   71.8  71.08  66.52  64.45  63.26  63.16   \n",
+       "2000-01-03   83.3  82.48  80.02  77.83  76.68  75.18  74.77  74.37  73.84   \n",
+       "2000-01-04  84.68  83.77  81.88   78.6  77.85  76.87  76.51  75.82   75.6   \n",
+       "2000-01-05  83.79  82.82  80.89  77.58  77.14  75.01  74.95  74.57  73.98   \n",
        "\n",
        "Hour           10  ...     15     16     17     18     19     20     21  \\\n",
        "Date               ...                                                    \n",
-       "2000-01-01  57.12  ...  59.47  59.53  59.62  60.42  64.34  64.73  67.74   \n",
-       "2000-01-02  59.12  ...  63.15  63.16  63.26  64.45  66.52  71.08   71.8   \n",
-       "2000-01-03  70.93  ...  73.71  73.84  74.37  74.77  75.18  76.68  77.83   \n",
-       "2000-01-04  72.73  ...  75.06   75.6  75.82  76.51  76.87  77.85   78.6   \n",
-       "2000-01-05  72.28  ...  73.79  73.98  74.57  74.95  75.01  77.14  77.58   \n",
+       "2000-01-01  59.47  ...  57.12   56.4  55.79   53.9  53.89  53.31     53   \n",
+       "2000-01-02  63.15  ...  59.12   56.7  55.62  53.89   53.5  52.87  51.34   \n",
+       "2000-01-03  73.71  ...  70.93  67.84  65.18   59.9  59.21  55.12  54.38   \n",
+       "2000-01-04  75.06  ...  72.73  71.55  65.84   63.2  60.52  57.34   56.8   \n",
+       "2000-01-05  73.79  ...  72.28  72.21  66.22  64.55  61.15  58.51  58.39   \n",
        "\n",
        "Hour           22     23     24  \n",
        "Date                             \n",
-       "2000-01-01   69.9  71.29  71.69  \n",
-       "2000-01-02  74.76  76.47  76.86  \n",
-       "2000-01-03  80.02  82.48   83.3  \n",
-       "2000-01-04  81.88  83.77  84.68  \n",
-       "2000-01-05  80.89  82.82  83.79  \n",
+       "2000-01-01  51.95  51.93  49.83  \n",
+       "2000-01-02  50.09  49.95  49.03  \n",
+       "2000-01-03  51.99  51.76  49.55  \n",
+       "2000-01-04  54.53  54.13  52.44  \n",
+       "2000-01-05  55.79  55.19  53.49  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,11 +738,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.to_csv('historical_prices_pivoted.csv')"
+    "df2.to_csv('./output/historical_prices_pivoted.csv')"
    ]
   },
   {
