update system schematic

--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,10 +41,11 @@
     "# dot = Digraph(comment='System')\n",
     "\n",
     "basins = ['stanislaus', 'merced', 'san_joaquin']\n",
-    "basins = ['stanislaus']\n",
+    "# basins = ['stanislaus']\n",
+    "basins = ['merced']\n",
     "version = None\n",
     "# version = 'cleaned'\n",
-    "version = 'simplified'\n",
+    "# version = 'simplified'\n",
     "# version = 'monthly'\n",
     "\n",
     "for basin in basins:\n",
