update preprocessing scripts

--- a/preprocessing/hydrologic forecasting/hydrology daily to monthly forecast.ipynb
+++ b/preprocessing/hydrologic forecasting/hydrology daily to monthly forecast.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "scenarios = ['Livneh']\n",
     "gcms = ['HadGEM2-ES', 'CNRM-CM5', 'CanESM2', 'MIROC5']\n",
-    "rcps = ['85']\n",
+    "rcps = ['45', '85']\n",
     "gcm_rcps = ['{}_rcp{}'.format(g, r) for g, r in product(gcms, rcps)]\n",
     "scenarios += gcm_rcps\n",
     "\n",
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b05bc81d1dd4bec8b94e9995c0fe6a2",
+       "model_id": "5933e7b6a8af45a1adcbf703389fae0a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83dbc3f697a74ead9b817cafa59ba28b",
+       "model_id": "33753ab9c4934967973d88175b433449",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,7 +72,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09cadfdc636849319133a3a348b3faee",
+       "model_id": "fd66a687ed5c43498dd0bf6c4a850bd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e147e97f8ab240c084dc512d08135c9e",
+       "model_id": "433b2deda41941fe904c091c5bc40f70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,7 +114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7518d4224af34794a24a6b288a5485ba",
+       "model_id": "a4388d52827e4e2993f76349b99a6601",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,7 +135,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "199faf6276e04c60ab650e6f9d844695",
+       "model_id": "9c45fb52b5514b5385e09d9bc0695dd9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,6 +235,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
