--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
     "# version = 'monthly'\n",
     "\n",
     "for basin in basins:\n",
-    "    filename = 'pywr_model'\n",
+    "    filename = 'pywr_model_Livneh'\n",
     "    if version:\n",
     "        filename += '_' + version\n",
     "    filename += '.json'\n",
