--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,9 @@
     "basins = ['stanislaus', 'merced', 'san_joaquin']\n",
     "# basins = ['stanislaus']\n",
     "basins = ['merced']\n",
-    "version = None\n",
+    "# version = None\n",
     "# version = 'cleaned'\n",
-    "# version = 'simplified'\n",
+    "version = 'simplified'\n",
     "# version = 'monthly'\n",
     "\n",
     "for basin in basins:\n",
