--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,9 @@
     "\n",
     "# dot = Digraph(comment='System')\n",
     "\n",
-    "basins = ['stanislaus', 'merced', 'san_joaquin']\n",
-    "# basins = ['stanislaus']\n",
-    "basins = ['merced']\n",
+    "basins = ['stanislaus', 'merced', 'upper_san_joaquin']\n",
+    "basins = ['upper_san_joaquin']\n",
+    "# basins = ['merced']\n",
     "# version = None\n",
     "# version = 'cleaned'\n",
     "version = 'simplified'\n",
@@ -112,13 +112,6 @@
     "        _dot.edges([edge])\n",
     "    _dot.render(os.path.join('schematics', '{}_schematic{}.gv'.format(basin, '' if not version else '_' + version)), view=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
