--- a/system schematic.ipynb
+++ b/system schematic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,8 @@
     "# dot = Digraph(comment='System')\n",
     "\n",
     "basins = ['stanislaus', 'merced', 'upper_san_joaquin']\n",
-    "basins = ['upper_san_joaquin']\n",
+    "# basins = ['upper_san_joaquin']\n",
+    "basins = ['stanislaus']\n",
     "# basins = ['merced']\n",
     "# version = None\n",
     "# version = 'cleaned'\n",
