--- a/preprocessing/pivot energy prices/pivot energy prices - historical.ipynb
+++ b/preprocessing/pivot energy prices/pivot energy prices - historical.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,13 +489,13 @@
    "source": [
     "sorted_reversed = [sorted(s, reverse=True) for s in df.values]\n",
     "df = pd.DataFrame(data=sorted_reversed, index=df.index, columns=df.columns)\n",
-    "df.to_csv('../../data/common/energy prices/prices_pivoted_PY2009.csv')\n",
+    "df.to_csv('./output/prices_pivoted_PY2009.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2000-01-01</th>\n",
+       "      <th>1980-01-01</th>\n",
        "      <td>71.69</td>\n",
        "      <td>71.29</td>\n",
        "      <td>69.9</td>\n",
@@ -592,7 +592,7 @@
        "      <td>49.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-01-02</th>\n",
+       "      <th>1980-01-02</th>\n",
        "      <td>76.86</td>\n",
        "      <td>76.47</td>\n",
        "      <td>74.76</td>\n",
@@ -616,7 +616,7 @@
        "      <td>49.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-01-03</th>\n",
+       "      <th>1980-01-03</th>\n",
        "      <td>83.3</td>\n",
        "      <td>82.48</td>\n",
        "      <td>80.02</td>\n",
@@ -640,7 +640,7 @@
        "      <td>49.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-01-04</th>\n",
+       "      <th>1980-01-04</th>\n",
        "      <td>84.68</td>\n",
        "      <td>83.77</td>\n",
        "      <td>81.88</td>\n",
@@ -664,7 +664,7 @@
        "      <td>52.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-01-05</th>\n",
+       "      <th>1980-01-05</th>\n",
        "      <td>83.79</td>\n",
        "      <td>82.82</td>\n",
        "      <td>80.89</td>\n",
@@ -695,39 +695,39 @@
       "text/plain": [
        "Hour           1      2      3      4      5      6      7      8      9   \\\n",
        "Date                                                                        \n",
-       "2000-01-01  71.69  71.29   69.9  67.74  64.73  64.34  60.42  59.62  59.53   \n",
-       "2000-01-02  76.86  76.47  74.76   71.8  71.08  66.52  64.45  63.26  63.16   \n",
-       "2000-01-03   83.3  82.48  80.02  77.83  76.68  75.18  74.77  74.37  73.84   \n",
-       "2000-01-04  84.68  83.77  81.88   78.6  77.85  76.87  76.51  75.82   75.6   \n",
-       "2000-01-05  83.79  82.82  80.89  77.58  77.14  75.01  74.95  74.57  73.98   \n",
+       "1980-01-01  71.69  71.29   69.9  67.74  64.73  64.34  60.42  59.62  59.53   \n",
+       "1980-01-02  76.86  76.47  74.76   71.8  71.08  66.52  64.45  63.26  63.16   \n",
+       "1980-01-03   83.3  82.48  80.02  77.83  76.68  75.18  74.77  74.37  73.84   \n",
+       "1980-01-04  84.68  83.77  81.88   78.6  77.85  76.87  76.51  75.82   75.6   \n",
+       "1980-01-05  83.79  82.82  80.89  77.58  77.14  75.01  74.95  74.57  73.98   \n",
        "\n",
        "Hour           10  ...     15     16     17     18     19     20     21  \\\n",
        "Date               ...                                                    \n",
-       "2000-01-01  59.47  ...  57.12   56.4  55.79   53.9  53.89  53.31     53   \n",
-       "2000-01-02  63.15  ...  59.12   56.7  55.62  53.89   53.5  52.87  51.34   \n",
-       "2000-01-03  73.71  ...  70.93  67.84  65.18   59.9  59.21  55.12  54.38   \n",
-       "2000-01-04  75.06  ...  72.73  71.55  65.84   63.2  60.52  57.34   56.8   \n",
-       "2000-01-05  73.79  ...  72.28  72.21  66.22  64.55  61.15  58.51  58.39   \n",
+       "1980-01-01  59.47  ...  57.12   56.4  55.79   53.9  53.89  53.31     53   \n",
+       "1980-01-02  63.15  ...  59.12   56.7  55.62  53.89   53.5  52.87  51.34   \n",
+       "1980-01-03  73.71  ...  70.93  67.84  65.18   59.9  59.21  55.12  54.38   \n",
+       "1980-01-04  75.06  ...  72.73  71.55  65.84   63.2  60.52  57.34   56.8   \n",
+       "1980-01-05  73.79  ...  72.28  72.21  66.22  64.55  61.15  58.51  58.39   \n",
        "\n",
        "Hour           22     23     24  \n",
        "Date                             \n",
-       "2000-01-01  51.95  51.93  49.83  \n",
-       "2000-01-02  50.09  49.95  49.03  \n",
-       "2000-01-03  51.99  51.76  49.55  \n",
-       "2000-01-04  54.53  54.13  52.44  \n",
-       "2000-01-05  55.79  55.19  53.49  \n",
+       "1980-01-01  51.95  51.93  49.83  \n",
+       "1980-01-02  50.09  49.95  49.03  \n",
+       "1980-01-03  51.99  51.76  49.55  \n",
+       "1980-01-04  54.53  54.13  52.44  \n",
+       "1980-01-05  55.79  55.19  53.49  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use this to extend years\n",
-    "df2 = pd.DataFrame(index = pd.date_range(start='2000-01-01', end='2020-12-31', freq='D'), columns=df.columns)\n",
+    "df2 = pd.DataFrame(index = pd.date_range(start='1980-01-01', end='2029-12-31', freq='D'), columns=df.columns)\n",
     "df2.index.name = 'Date'\n",
     "for date in df2.index:\n",
     "    for col in df2.columns:\n",
@@ -736,7 +736,7 @@
     "        else:\n",
     "            lookup_date = pd.Timestamp(date.strftime('2009-%m-%d'))\n",
     "        df2.at[date, col] = df.at[lookup_date, col]\n",
-    "df2.to_csv('./output/prices_pivoted_PY2009.csv')\n",
+    "df2.to_csv('./output/prices_pivoted_1980-2029.csv')\n",
     "df2.head()"
    ]
   },
