update gauge flow data extraction

--- a/preprocessing/USGS Gauge Flow Data extraction/Retrieve USGS gauge data - python.ipynb
+++ b/preprocessing/USGS Gauge Flow Data extraction/Retrieve USGS gauge data - python.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "import os\n",
     "import hydrofunctions as hf\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,39 +16,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "retrieving USGS 11264500 MERCED R A HAPPY ISLES BRIDGE NR YOSEMITE CA (16%)\n",
-      "retrieving USGS 11266500 MERCED R A POHONO BRIDGE NR YOSEMITE CA (33%)\n",
-      "retrieving USGS 11270900 MERCED R BL MERCED FALLS DAM NR SNELL CA (50%)\n",
-      "retrieving USGS 11271290 MERCED R A SHAFFER BRIDGE NR CRESSEY CA (66%)\n",
-      "retrieving USGS 11272500 MERCED R NR STEVINSON CA (83%)\n",
-      "retrieving USGS 11269700 EXCHEQUER PH A EXCHEQUER CA (100%)\n",
+      "retrieving USGS 11275500 HETCH HETCHY RES A HETCH HETCHY CA (25%)\n",
+      "retrieving USGS 11277500 LK ELEANOR NR HETCH HETCHY CA (50%)\n",
+      "retrieving USGS 11277200 CHERRY LK NR HETCH HETCHY CA (75%)\n",
+      "retrieving USGS 11287500 DON PEDRO RES NR LA GRANGE CA (100%)\n",
       "done!\n"
      ]
     }
    ],
    "source": [
-    "basin = 'merced'\n",
+    "# basin = 'merced'\n",
+    "# basin = 'upper san joaquin'\n",
+    "basin = 'tuolumne'\n",
     "\n",
-    "variable = 'streamflow'\n",
-    "pc = '00060'\n",
+    "# variable = 'streamflow'\n",
+    "# pc = '00060'\n",
     "\n",
-    "# variable = 'storage'\n",
-    "# pc = '00054'\n",
+    "variable = 'storage'\n",
+    "pc = '00054'\n",
     "\n",
-    "gages = pd.read_excel('USGS gauges.xlsx', sheet_name='{}-{}'.format(basin, variable), header=None, squeeze=True)\n",
+    "if not os.path.exists(basin):\n",
+    "    os.mkdir(basin)\n",
+    "\n",
+    "gages = pd.read_excel('USGS gauges.xlsx', sheet_name='{} - {}'.format(basin, variable), header=None, squeeze=True)\n",
     "\n",
     "dfs = []\n",
     "if DEBUG:\n",
     "    gages = gages[:3]\n",
     "for i, gage in enumerate(gages):\n",
-    "    gage_number = gage.split(' ')[1]\n",
+    "    gage_number = gage.strip().split(' ')[1]\n",
     "    print('retrieving {} ({}%)'.format(gage, int((i+1) / len(gages) * 100)))\n",
     "    herring = hf.NWIS(gage_number, 'dv', '1975-10-01', '2018-09-30', parameterCd=pc)\n",
     "    try:\n",
