update gauge flow data extraction

--- a/preprocessing/USGS Gauge Flow Data extraction/Retrieve USGS gauge data - python.ipynb
+++ b/preprocessing/USGS Gauge Flow Data extraction/Retrieve USGS gauge data - python.ipynb
@@ -2,45 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "import os\n",
-    "import hydrofunctions as hf\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "DEBUG = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "retrieving USGS 11275500 HETCH HETCHY RES A HETCH HETCHY CA (25%)\n",
-      "retrieving USGS 11277500 LK ELEANOR NR HETCH HETCHY CA (50%)\n",
-      "retrieving USGS 11277200 CHERRY LK NR HETCH HETCHY CA (75%)\n",
-      "retrieving USGS 11287500 DON PEDRO RES NR LA GRANGE CA (100%)\n",
+      "retrieving USGS 11264500 MERCED R A HAPPY ISLES BRIDGE NR YOSEMITE CA (16%)\n",
+      "retrieving USGS 11266500 MERCED R A POHONO BRIDGE NR YOSEMITE CA (33%)\n",
+      "retrieving USGS 11270900 MERCED R BL MERCED FALLS DAM NR SNELL CA (50%)\n",
+      "retrieving USGS 11271290 MERCED R A SHAFFER BRIDGE NR CRESSEY CA (66%)\n",
+      "retrieving USGS 11272500 MERCED R NR STEVINSON CA (83%)\n",
+      "retrieving USGS 11269700 EXCHEQUER PH A EXCHEQUER CA (100%)\n",
       "done!\n"
      ]
     }
    ],
    "source": [
-    "# basin = 'merced'\n",
+    "%matplotlib inline\n",
+    "import os\n",
+    "import hydrofunctions as hf\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "DEBUG = False\n",
+    "\n",
+    "basin = 'merced'\n",
     "# basin = 'upper san joaquin'\n",
-    "basin = 'tuolumne'\n",
+    "# basin = 'tuolumne'\n",
     "\n",
-    "# variable = 'streamflow'\n",
-    "# pc = '00060'\n",
+    "variable = 'streamflow'\n",
+    "pc = '00060'\n",
     "\n",
-    "variable = 'storage'\n",
-    "pc = '00054'\n",
+    "# variable = 'storage'\n",
+    "# pc = '00054'\n",
     "\n",
     "if not os.path.exists(basin):\n",
     "    os.mkdir(basin)\n",
@@ -71,9 +66,12 @@
     "    plt.show()\n",
     "else:\n",
     "    if variable == 'storage':\n",
-    "        df.to_csv('{}/usgs_storage_af.csv'.format(basin))\n",
+    "        df = df * 1233.5 / 1e6\n",
+    "        path = '../../data/{} River/gauges/storage_mcm.csv'.format(basin.title())\n",
+    "        df.to_csv(path)\n",
     "    else:\n",
-    "        df.to_csv('{}/usgs_streamflow_cfs.csv'.format(basin))\n",
+    "        path = '../../data/{} River/gauges/streamflow_cfs.csv'.format(basin.title())\n",
+    "        df.to_csv(path)\n",
     "print('done!')"
    ]
   },
